bug fix: input cursor not showing on chrome

--- a/src/scss/components/_btn.scss
+++ b/src/scss/components/_btn.scss
@@ -200,6 +200,10 @@
     &:hover {
       transform: scale(1.15);
     }
+
+    @include breakpoint(medium) {
+      left: 146%;
+    }
   }
 
   &--upload {
