--- a/src/scss/components/_recipe-upload.scss
+++ b/src/scss/components/_recipe-upload.scss
@@ -35,6 +35,7 @@
   @include breakpoint(medium) {
     height: rem(620);
     padding: rem(30) rem(40);
+    overflow: visible;
   }
 
   @include breakpoint(large) {
@@ -47,10 +48,18 @@
   height: 100%;
 
   @include breakpoint(medium) {
-    margin-top: rem(-30);
+    margin-top: -30px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 0 rem(30);
+
+    .error {
+      grid-column: 1/-1;
+      &__text {
+        width: 21ch;
+        font-size: rem(30);
+      }
+    }
   }
 
   &__column {
@@ -79,14 +88,14 @@
       font-size: rem(16);
       width: 100%;
       border: 1px solid $color-primary;
-      padding: rem(12) rem(4) rem(9);
+      padding: rem(12) rem(8) rem(9);
       border-radius: rem(8);
       color: $color-blue;
       font-family: $font-secondary;
 
       &:focus {
         outline: none;
-        padding: rem(11) rem(3) rem(8);
+        padding: rem(11) rem(7) rem(8);
         border: 2px solid $color-primary;
         background-color: #f7ddc9;
       }
